# gmake

./: meson.build
doc/: gmake.1.rst
src/: config.h.meson  job.c  meson.build
