configure_file(input: 'config.h.meson',
               output: 'config.h',
               configuration: cdata)

make_src = files('ar.c',
                 'arscan.c',
                 'commands.c',
                 'commands.h',
                 'debug.h',
                 'default.c',
                 'dep.h',
                 'dir.c',
                 'expand.c',
                 'file.c',
                 'filedef.h',
                 'function.c',
                 'getopt.c',
                 'getopt.h',
                 'getopt1.c',
                 'gettext.h',
                 'guile.c',
                 'hash.c',
                 'hash.h',
                 'implicit.c',
                 'job.c',
                 'job.h',
                 'load.c',
                 'loadapi.c',
                 'main.c',
                 'makeint.h',
                 'misc.c',
                 'os.h',
                 'output.c',
                 'output.h',
                 'read.c',
                 'remake.c',
                 'rule.c',
                 'rule.h',
                 'shuffle.h',
                 'shuffle.c',
                 'signame.c',
                 'strcache.c',
                 'variable.c',
                 'variable.h',
                 'version.c',
                 'vpath.c')

make_bin = executable('gmake', make_src)